// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form element renders drop-down for custom options 1`] = `
<div
  class="form-element-container flex justify-between items-center px-[48px] py-[8px] bg-neutral inner-box-shadow"
>
  <div
    class="text-sm"
  >
    <label
      class="text-sm"
      for="form-name"
      id="form-name-label"
    >
      Awesome Label
    </label>
    <div
      class="tooltip"
    >
      <img
        alt=""
      />
      <span
        class="tooltiptext"
      />
    </div>
  </div>
  <div>
    <!--v-if-->
    <div>
      <select
        class="settings-input"
        id="form-name"
        required=""
      >
        
        <option
          value="awesome"
        >
          Awesome
        </option>
        
      </select>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`form element renders drop-down for standard options 1`] = `
<div
  class="form-element-container flex justify-between items-center px-[48px] py-[8px] bg-neutral inner-box-shadow"
>
  <div
    class="text-sm"
  >
    <label
      class="text-sm"
      for="form-name"
      id="form-name-label"
    >
      Awesome Label
    </label>
    <div
      class="tooltip"
    >
      <img
        alt=""
      />
      <span
        class="tooltiptext"
      />
    </div>
  </div>
  <div>
    <!--v-if-->
    <div>
      <select
        class="settings-input"
        id="form-name"
        required=""
      >
        
        <option
          value="true"
        >
          Aktiviert
        </option>
        <option
          value="false"
        >
          Deaktiviert
        </option>
        
      </select>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`form element renders email field 1`] = `
<div
  class="form-element-container flex justify-between items-center px-[48px] py-[8px] bg-neutral inner-box-shadow"
>
  <div
    class="text-sm"
  >
    <label
      class="text-sm"
      for="form-name"
      id="form-name-label"
    >
      Awesome Label
    </label>
    <div
      class="tooltip"
    >
      <img
        alt=""
      />
      <span
        class="tooltiptext"
      />
    </div>
  </div>
  <div>
    <div>
      <input
        class="settings-input"
        id="form-name"
        placeholder="Awesome Value"
        required=""
        type="email"
      />
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`form element renders file field 1`] = `
<div
  class="form-element-container flex justify-between items-center px-[48px] py-[8px] bg-neutral inner-box-shadow"
>
  <div
    class="text-sm"
  >
    <label
      class="text-sm"
      for="form-name"
      id="form-name-label"
    >
      Awesome Label
    </label>
    <div
      class="tooltip"
    >
      <img
        alt=""
      />
      <span
        class="tooltiptext"
      />
    </div>
  </div>
  <div>
    <!--v-if-->
    <div>
      <label
        class="relative flex row justify-between settings-input w-[233px] leading-[100%] truncate overflow-hidden"
      >
        
        
        <!--v-if-->
        
        
        <img
          alt="File-Upload Icon"
          class="object-none"
        />
        <input
          accept=".pem,.p12,.cer,.key"
          id="form-name"
          required=""
          title=""
          type="file"
        />
        <!--v-if-->
      </label>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`form element renders file-path field 1`] = `
<div
  class="form-element-container flex justify-between items-center px-[48px] py-[8px] bg-neutral inner-box-shadow"
>
  <div
    class="text-sm"
  >
    <label
      class="text-sm"
      for="form-name"
      id="form-name-label"
    >
      Awesome Label
    </label>
    <div
      class="tooltip"
    >
      <img
        alt=""
      />
      <span
        class="tooltiptext"
      />
    </div>
  </div>
  <div>
    <!--v-if-->
    <div>
      <label
        class="relative flex row justify-between settings-input w-[233px] leading-[100%] truncate overflow-hidden"
      >
        
        
        <!--v-if-->
        
        
        <img
          alt="File-Upload Icon"
          class="object-none"
        />
        <input
          accept=".pem,.p12,.cer,.key"
          id="form-name"
          required=""
          title=""
          type="file"
        />
        <!--v-if-->
      </label>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`form element renders file-path field 2`] = `
<div
  class="form-element-container flex justify-between items-center px-[48px] py-[8px] bg-neutral inner-box-shadow"
>
  <div
    class="text-sm"
  >
    <label
      class="text-sm"
      for="form-name"
      id="form-name-label"
    >
      Awesome Label
    </label>
    <div
      class="tooltip"
    >
      <img
        alt=""
      />
      <span
        class="tooltiptext"
      />
    </div>
  </div>
  <div>
    <div>
      <input
        class="settings-input"
        id="form-name"
        placeholder="Awesome Value"
        required=""
        type="password"
      />
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`form element renders input field 1`] = `
<div
  class="form-element-container flex justify-between items-center px-[48px] py-[8px] bg-neutral inner-box-shadow"
>
  <div
    class="text-sm"
  >
    <label
      class="text-sm"
      for="form-name"
      id="form-name-label"
    >
      Awesome Label
    </label>
    <div
      class="tooltip"
    >
      <img
        alt=""
      />
      <span
        class="tooltiptext"
      />
    </div>
  </div>
  <div>
    <div>
      <input
        class="settings-input"
        id="form-name"
        placeholder="Awesome Value"
        required=""
        type="input"
      />
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`form element renders number field 1`] = `
<div
  class="form-element-container flex justify-between items-center px-[48px] py-[8px] bg-neutral inner-box-shadow"
>
  <div
    class="text-sm"
  >
    <label
      class="text-sm"
      for="form-name"
      id="form-name-label"
    >
      Awesome Label
    </label>
    <div
      class="tooltip"
    >
      <img
        alt=""
      />
      <span
        class="tooltiptext"
      />
    </div>
  </div>
  <div>
    <div>
      <input
        class="settings-input"
        id="form-name"
        placeholder="Awesome Value"
        required=""
        type="number"
      />
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`form element renders text field 1`] = `
<div
  class="form-element-container flex justify-between items-center px-[48px] py-[8px] bg-neutral inner-box-shadow"
>
  <div
    class="text-sm"
  >
    <label
      class="text-sm"
      for="form-name"
      id="form-name-label"
    >
      Awesome Label
    </label>
    <div
      class="tooltip"
    >
      <img
        alt=""
      />
      <span
        class="tooltiptext"
      />
    </div>
  </div>
  <div>
    <!--v-if-->
    <div>
      <textarea
        class="settings-input"
        id="form-name"
        placeholder="Awesome Value"
        required=""
      />
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;
